veygo-app/main/default/objects/Contact/fields/AverageNumHoursPurchased__c.field-meta.xml
<CustomField>
    <fullName>AverageNumHoursPurchased__c</fullName>
    <label>Average no. of hours purchased</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>