veygo-app/main/default/objects/Contact/fields/AveragePremiumPerPolicy__c.field-meta.xml
<CustomField>
    <fullName>AveragePremiumPerPolicy__c</fullName>
    <label>Average premium per policy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>