veygo-app/main/default/objects/Contact/fields/CanBeContacted__c.field-meta.xml
<CustomField>
    <fullName>CanBeContacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can be contacted</label>
    <type>Checkbox</type>
</CustomField>