veygo-app/main/default/objects/Contact/fields/CassieLicenceType__c.field-meta.xml
<CustomField>
    <fullName>CassieLicenceType__c</fullName>
    <label>Cassie licence type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>