veygo-app/main/default/objects/Contact/fields/CassiseLicenceValidFrom__c.field-meta.xml
<CustomField>
    <fullName>CassiseLicenceValidFrom__c</fullName>
    <label>Cassise licence valid from</label>
    <type>Date</type>
</CustomField>