veygo-app/main/default/objects/Contact/fields/ContactRating__c.field-meta.xml
<CustomField>
    <fullName>ContactRating__c</fullName>
    <label>Contact Rating</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>