veygo-app/main/default/objects/Contact/fields/CustomerLastEditedPersonalInfo__c.field-meta.xml
<CustomField>
    <fullName>CustomerLastEditedPersonalInfo__c</fullName>
    <label>Customer last edited personal info</label>
    <type>DateTime</type>
</CustomField>