veygo-app/main/default/objects/Contact/fields/CustomerUpgradedLicenceOn__c.field-meta.xml
<CustomField>
    <fullName>CustomerUpgradedLicenceOn__c</fullName>
    <label>Customer upgraded licence on</label>
    <type>DateTime</type>
</CustomField>