veygo-app/main/default/objects/Contact/fields/DidYouPass__c.field-meta.xml
<CustomField>
    <fullName>DidYouPass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did you pass</label>
    <type>Checkbox</type>
</CustomField>