veygo-app/main/default/objects/Contact/fields/EmailCampaignActivity__c.field-meta.xml
<CustomField>
    <fullName>EmailCampaignActivity__c</fullName>
    <label>Email Campaign Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>