veygo-app/main/default/objects/Contact/fields/EmailConsent__c.field-meta.xml
<CustomField>
    <fullName>EmailConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email consent</label>
    <type>Checkbox</type>
</CustomField>