veygo-app/main/default/objects/Contact/fields/EmailConsentDatetime__c.field-meta.xml
<CustomField>
    <fullName>EmailConsentDatetime__c</fullName>
    <label>Email consent datetime</label>
    <type>DateTime</type>
</CustomField>