veygo-app/main/default/objects/Contact/fields/FinServ__ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ShippingAddress__c</fullName>
    <description>Concatenated shipping address field.</description>
    <formula>if(ISBLANK(Account.ShippingStreet), &quot;&quot; , Account.ShippingStreet &amp; br()) &amp;
if(ISBLANK(Account.ShippingCity), &quot;&quot; , Account.ShippingCity&amp; &quot;, &quot;)&amp;
if(ISBLANK(Account.ShippingState),  &quot;&quot; , Account.ShippingState&amp; &quot; &quot;)&amp;
if(ISBLANK(Account.ShippingPostalCode), &quot;&quot; , Account.ShippingPostalCode &amp; br())  &amp;
If(ISBLANK( Account.ShippingCountry), &quot;&quot; , Account.ShippingCountry)</formula>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>