veygo-app/main/default/objects/Contact/fields/GA_ListOrCountOfAnyOnSiteEvents__c.field-meta.xml
<CustomField>
    <fullName>GA_ListOrCountOfAnyOnSiteEvents__c</fullName>
    <label>GA, a list/count of any on site events</label>
    <length>255</length>
    <type>Text</type>
</CustomField>