veygo-app/main/default/objects/Contact/fields/HasClaim__c.field-meta.xml
<CustomField>
    <fullName>HasClaim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has claim</label>
    <type>Checkbox</type>
</CustomField>