veygo-app/main/default/objects/Contact/fields/LatestProductPurchased__c.field-meta.xml
<CustomField>
    <fullName>LatestProductPurchased__c</fullName>
    <label>Latest product purchased</label>
    <length>255</length>
    <type>Text</type>
</CustomField>