veygo-app/main/default/objects/Contact/fields/LicenceType__c.field-meta.xml
<CustomField>
    <fullName>LicenceType__c</fullName>
    <label>Licence type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ukm</fullName>
                <label>Full GB Manual</label>
            </value>
            <value>
                <fullName>ukp</fullName>
                <label>Provisional Licence</label>
            </value>
            <value>
                <fullName>uka</fullName>
                <label>Full GB Automatic</label>
            </value>
            <value>
                <fullName>nuk</fullName>
                <label>Licence issued outside the GB</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>