veygo-app/main/default/objects/Contact/fields/MemberRating__c.field-meta.xml
<CustomField>
    <fullName>MemberRating__c</fullName>
    <label>Member Rating</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>