veygo-app/main/default/objects/Contact/fields/MigratedFromLDP__c.field-meta.xml
<CustomField>
    <fullName>MigratedFromLDP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migrated from LDP</label>
    <type>Checkbox</type>
</CustomField>