veygo-app/main/default/objects/Contact/fields/MostRecentALF__c.field-meta.xml
<CustomField>
    <fullName>MostRecentALF__c</fullName>
    <label>Most recent ALF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>