veygo-app/main/default/objects/Contact/fields/MostRecentPolicyEndTime__c.field-meta.xml
<CustomField>
    <fullName>MostRecentPolicyEndTime__c</fullName>
    <label>Most recent policy end time</label>
    <type>DateTime</type>
</CustomField>