veygo-app/main/default/objects/Contact/fields/NumTimesPurchased__c.field-meta.xml
<CustomField>
    <fullName>NumTimesPurchased__c</fullName>
    <label>No. of times purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>