veygo-app/main/default/objects/Contact/fields/OccupationType__c.field-meta.xml
<CustomField>
    <fullName>OccupationType__c</fullName>
    <label>Occupation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>employed</fullName>
                <label>Employed</label>
            </value>
            <value>
                <fullName>student</fullName>
                <label>Student</label>
            </value>
            <value>
                <fullName>other</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>