veygo-app/main/default/objects/Contact/fields/PhoneConsent__c.field-meta.xml
<CustomField>
    <fullName>PhoneConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone consent</label>
    <type>Checkbox</type>
</CustomField>