veygo-app/main/default/objects/Contact/fields/PhoneConsentDatetime__c.field-meta.xml
<CustomField>
    <fullName>PhoneConsentDatetime__c</fullName>
    <label>Phone consent datetime</label>
    <type>DateTime</type>
</CustomField>