veygo-app/main/default/objects/Contact/fields/PolicyDurationHours__c.field-meta.xml
<CustomField>
    <fullName>PolicyDurationHours__c</fullName>
    <label>Policy Duration (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>