veygo-app/main/default/objects/Contact/fields/RAF_Code__c.field-meta.xml
<CustomField>
    <fullName>RAF_Code__c</fullName>
    <label>RAF code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>