veygo-app/main/default/objects/Contact/fields/RegisteredAt__c.field-meta.xml
<CustomField>
    <fullName>RegisteredAt__c</fullName>
    <label>Registered at</label>
    <length>255</length>
    <type>Text</type>
</CustomField>