veygo-app/main/default/objects/Contact/fields/Subscribed__c.field-meta.xml
<CustomField>
    <fullName>Subscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscribed​</label>
    <type>Checkbox</type>
</CustomField>