veygo-app/main/default/objects/Contact/fields/TestDate__c.field-meta.xml
<CustomField>
    <fullName>TestDate__c</fullName>
    <label>Test date</label>
    <type>Date</type>
</CustomField>