veygo-app/main/default/objects/Contact/fields/UW_Passed__c.field-meta.xml
<CustomField>
    <fullName>UW_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UW passed</label>
    <type>Checkbox</type>
</CustomField>