veygo-app/main/default/objects/Contact/recordTypes/FinServ__IndustriesBusiness.recordType-meta.xml
<RecordType>
    <fullName>FinServ__IndustriesBusiness</fullName>
    <active>true</active>
    <description>Contact data for an institution or a business account</description>
    <label>Business</label>
</RecordType>